# rp2040-devenv-boilerplate

./: .gitmodules  CMakeLists.txt  README.md
src-hello-world/: CMakeLists.txt  RP2040Log.hpp  TransportUsbHid.cpp  TransportUsbHid.hpp  main.cpp
